[gd_scene load_steps=18 format=3 uid="uid://jdgl6gpb80es"]

[ext_resource type="Script" uid="uid://cp1qex37r1rrc" path="res://Prefab/UI/ui.gd" id="1_gtstx"]
[ext_resource type="PackedScene" uid="uid://cgqr0bo81lrix" path="res://Prefab/UI/Joystick/Joystick.tscn" id="2_bqg0t"]
[ext_resource type="Theme" uid="uid://c6vho6rwvu82i" path="res://Art/Font/my_theme.tres" id="3_17e3r"]
[ext_resource type="AudioStream" uid="uid://cv1200f5e67ib" path="res://Art/Sounds/explosion.wav" id="4_wheuw"]
[ext_resource type="AudioStream" uid="uid://3i1neqbgutxm" path="res://Art/Sounds/pickupCoin.wav" id="5_fiall"]
[ext_resource type="AudioStream" uid="uid://cejnvkaruohkw" path="res://Art/Sounds/bonusPickUp.wav" id="6_3qnsr"]
[ext_resource type="AudioStream" uid="uid://b34dfti6a06rt" path="res://Art/Sounds/bonusUsed.wav" id="7_ty01m"]
[ext_resource type="Script" uid="uid://dncevmkgy25gn" path="res://Prefab/UI/Inventory/inventory_display.gd" id="8_fiall"]
[ext_resource type="PackedScene" uid="uid://d0hb815m3rp0f" path="res://Prefab/UI/Inventory/ItemSlot.tscn" id="9_3qnsr"]
[ext_resource type="Texture2D" uid="uid://bku1tgsc4dkjk" path="res://Art/Sprites/icon/arrow_down.png" id="10_ty01m"]
[ext_resource type="Texture2D" uid="uid://dsibb0fq75v1t" path="res://Art/Sprites/icon/arrow_left.png" id="11_ty01m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fiall"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ty01m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18pal"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jum4t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tc14e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_shvhy"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_gtstx")

[node name="Joystick" parent="." instance=ExtResource("2_bqg0t")]

[node name="GameOverScreen" type="GridContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.224949, 0.224949)
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Control" type="Control" parent="GameOverScreen"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="GameOverScreen/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.5
offset_top = -313.0
offset_right = 324.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 1
theme = ExtResource("3_17e3r")
theme_override_font_sizes/font_size = 256
text = "ROUND OVER"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="GameOverScreen"]
layout_mode = 2

[node name="Button" type="Button" parent="GameOverScreen/Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -494.0
offset_right = 494.0
offset_bottom = 321.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("3_17e3r")
theme_override_font_sizes/font_size = 256
text = "Restart"

[node name="WaveLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -352.0
offset_top = -7.0
offset_right = 353.0
offset_bottom = 80.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("3_17e3r")
text = "Wave: 0 / 0 - Enemy killed: 0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveCompletedLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.5
offset_top = -43.5
offset_right = 352.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("3_17e3r")
text = "Wave %d completed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
offset_left = 1.0
offset_top = -8.0
offset_right = 189.0
offset_bottom = 79.0
size_flags_horizontal = 4
theme = ExtResource("3_17e3r")
text = " Level: 0"
vertical_alignment = 1

[node name="IsServerLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -148.0
offset_right = 353.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("3_17e3r")
text = "SERVER UI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NetworkLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -705.0
offset_top = -7.0
offset_bottom = 80.0
grow_horizontal = 0
size_flags_horizontal = 4
theme = ExtResource("3_17e3r")
text = "Player connected: 0 "
horizontal_alignment = 2
vertical_alignment = 1

[node name="IsAGameRunningLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.5
offset_top = -43.5
offset_right = 352.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("3_17e3r")
text = "A round is running, wait for the end to get started again ..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BonusLabel" type="Label" parent="."]
visible = false
offset_left = 28.0
offset_top = -2.0
offset_right = 390.89847
offset_bottom = 85.0
rotation = -0.00440829
size_flags_horizontal = 4
theme = ExtResource("3_17e3r")
text = " Shield: 0 "
vertical_alignment = 1

[node name="AiButtonTest" type="Button" parent="."]
visible = false
offset_left = 28.0
offset_top = 105.0
offset_right = 176.0
offset_bottom = 170.0
text = "TEST AI BUTTON"

[node name="AiResponseLabel" type="Label" parent="."]
visible = false
offset_left = 10.0
offset_top = 181.0
offset_right = 162.0
offset_bottom = 204.0
text = "AI RESPONSE LABEL"

[node name="AiRequestFailedLabel" type="Label" parent="."]
visible = false
offset_left = -15.0
offset_top = 216.0
offset_right = 170.0
offset_bottom = 239.0
text = "AI Request Failed LABEL"

[node name="AudioManager" type="Node" parent="."]

[node name="ExplosionAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("4_wheuw")

[node name="WinAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("5_fiall")

[node name="BonusPickUpAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("6_3qnsr")

[node name="BonusUsedAudioStreamPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("7_ty01m")

[node name="ControlInventory" type="Control" parent="."]
z_index = -7
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Control" type="Control" parent="ControlInventory"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="InventoryDisplay" type="Control" parent="ControlInventory/Control" node_paths=PackedStringArray("slot_parent")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_fiall")
slot_parent = NodePath("HBoxContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="ControlInventory/Control/InventoryDisplay"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -30.0
offset_right = 254.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ItemSlot" parent="ControlInventory/Control/InventoryDisplay/HBoxContainer" instance=ExtResource("9_3qnsr")]
layout_mode = 2

[node name="ItemSlot2" parent="ControlInventory/Control/InventoryDisplay/HBoxContainer" instance=ExtResource("9_3qnsr")]
layout_mode = 2

[node name="ItemSlot3" parent="ControlInventory/Control/InventoryDisplay/HBoxContainer" instance=ExtResource("9_3qnsr")]
layout_mode = 2

[node name="ItemSlot4" parent="ControlInventory/Control/InventoryDisplay/HBoxContainer" instance=ExtResource("9_3qnsr")]
layout_mode = 2

[node name="ItemSlot5" parent="ControlInventory/Control/InventoryDisplay/HBoxContainer" instance=ExtResource("9_3qnsr")]
layout_mode = 2

[node name="ItemSlot6" parent="ControlInventory/Control/InventoryDisplay/HBoxContainer" instance=ExtResource("9_3qnsr")]
layout_mode = 2

[node name="ItemSlot7" parent="ControlInventory/Control/InventoryDisplay/HBoxContainer" instance=ExtResource("9_3qnsr")]
layout_mode = 2

[node name="ItemSlot8" parent="ControlInventory/Control/InventoryDisplay/HBoxContainer" instance=ExtResource("9_3qnsr")]
layout_mode = 2

[node name="ControlQuests" type="Control" parent="."]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="Control" type="Control" parent="ControlQuests"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ControlQuests/Control"]
layout_direction = 3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -229.0
offset_right = 195.0
grow_vertical = 0

[node name="Label" type="Label" parent="ControlQuests/Control/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("3_17e3r")
theme_override_font_sizes/font_size = 16
text = "                              Quests"

[node name="RichTextLabel" type="RichTextLabel" parent="ControlQuests/Control/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("3_17e3r")
bbcode_enabled = true
text = "Test - 15 x [img=24]res://Art/Sprites/star_2.png[/img] world!qweqweqweqweqweqwe"
fit_content = true

[node name="ProgressBar" type="ProgressBar" parent="ControlQuests/Control/VBoxContainer"]
visible = false
layout_direction = 2
layout_mode = 2
theme = ExtResource("3_17e3r")
max_value = 10.0
step = 1.0
value = 4.0
show_percentage = false

[node name="Control" type="Control" parent="ControlQuests/Control/VBoxContainer"]
layout_mode = 2

[node name="Tree" type="Tree" parent="ControlQuests/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_direction = 2
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_17e3r")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.91764706, 0.30980393, 0.21176471, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 12
theme_override_font_sizes/title_button_font_size = 12
theme_override_icons/arrow = ExtResource("10_ty01m")
theme_override_icons/arrow_collapsed = ExtResource("11_ty01m")
theme_override_styles/panel = SubResource("StyleBoxFlat_fiall")
theme_override_styles/hovered = SubResource("StyleBoxEmpty_ty01m")
theme_override_styles/hovered_dimmed = SubResource("StyleBoxEmpty_18pal")
theme_override_styles/hovered_selected = SubResource("StyleBoxEmpty_jum4t")
theme_override_styles/hovered_selected_focus = SubResource("StyleBoxEmpty_tc14e")
theme_override_styles/selected = SubResource("StyleBoxEmpty_shvhy")
select_mode = 1
auto_tooltip = false

[connection signal="pressed" from="AiButtonTest" to="." method="_on_ai_button_test_pressed"]
